--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "main.js",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node main.js"
   },
@@ -14,11 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "jwt-simple": "^0.5.6",
     "mongoose": "^6.7.4",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local": "^1.0.0"
   }
 }
